Fixed scroll issue on collapse navbar.

--- a/TabRepository/wwwroot/css/site.css
+++ b/TabRepository/wwwroot/css/site.css
@@ -64,6 +64,10 @@ body {
     display: flex;
 }
 
+.navbar-fixed-top .navbar-collapse, .navbar-fixed-bottom .navbar-collapse {
+    overflow-y: scroll;
+}
+
 .search-results {
     position: absolute;
     /*This is relative to the search-form in the navbar*/
